--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script id="usercentrics-cmp" data-settings-id="rbmDXXEwc" src="https://app.usercentrics.eu/browser-ui/latest/bundle.js" data-tcf-enabled></script>
+<script id="usercentrics-cmp" data-settings-id="Sv7XToom3" src="https://app.usercentrics.eu/browser-ui/latest/bundle.js" data-tcf-enabled></script>
 </head>
     
 <body>
@@ -12,6 +12,7 @@
                 <p>
                     This page serves as a TCF 2.0 implementation test for the UserCentrics CMP.
                 </p>
+    <script>window ['gtag_enable_tcf_support'] = true;</script>
     
     <button onclick="javascript:UC_UI.showSecondLayer();">Show Second layer</button>
 
