--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-<script id="usercentrics-cmp" data-settings-id="Sv7XToom3" src="https://app.usercentrics.eu/browser-ui/latest/bundle.js" data-tcf-enabled></script>
-    
+
+<script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="025bf320-f598-4935-8a8d-ef7d858c7ee7" data-blockingmode="auto" type="text/javascript"></script>
 <script>window ['gtag_enable_tcf_support'] = true;</script>    
 
 <!-- Google Tag Manager -->
