--- a/index.html
+++ b/index.html
@@ -22,9 +22,11 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                 <p>
                     This page serves as a TCF 2.0 implementation test for the UserCentrics CMP.
                 </p>
+    
+    <script id="CookieDeclaration" src="https://consent.cookiebot.com/025bf320-f598-4935-8a8d-ef7d858c7ee7/cd.js" type="text/javascript" async></script>
 
     
-    <button onclick="javascript:UC_UI.showSecondLayer();">Show Second layer</button>
+   <!-- <button onclick="javascript:UC_UI.showSecondLayer();">Show Second layer</button> -->
 
 </body>
 </html>
