--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     Just an implementation test
                 </h1>
                 <p>
-                    This page serves as a TCF 2.0 implementation test for the UserCentrics CMP.
+                    This page serves as a TCF 2.0 implementation test for the CMP.
                 </p>
     
     <script id="CookieDeclaration" src="https://consent.cookiebot.com/025bf320-f598-4935-8a8d-ef7d858c7ee7/cd.js" type="text/javascript" async></script>
