--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="025bf320-f598-4935-8a8d-ef7d858c7ee7" data-blockingmode="auto" type="text/javascript"></script>
+<script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="025bf320-f598-4935-8a8d-ef7d858c7ee7" data-framework="IAB" type="text/javascript"></script>
 <script>window ['gtag_enable_tcf_support'] = true;</script>    
 
 <!-- Google Tag Manager -->
