--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
 
 <script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="025bf320-f598-4935-8a8d-ef7d858c7ee7" data-framework="IAB" type="text/javascript"></script>
-<script>window ['gtag_enable_tcf_support'] = true;</script>    
+
+<script>var dataLayer = dataLayer || [];
+dataLayer.push({"channel":"myposter","country":"de","currency":"eur","locale":"de-DE","language":"de","platform":"w","sessionId":"83e0ae2661","googleAnalyticsTrackingId":"UA-23695719-1","page":{"uniqueIdentifier":"\/","templateType":"page-template-start"},"contextProduct":{"materialType":"leinwand","formatType":"800x600","sku":"lw-800x600","priceCurrent":54.99,"priceOriginal":54.99},"remarketingProduct":{"sku":"lw-800x600","price":54.99,"category":"Leinwand"}});
+</script>
+    <script>window ['gtag_enable_tcf_support'] = true;</script>    
 
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
