--- a/index.html
+++ b/index.html
@@ -2,8 +2,6 @@
 <html>
 <head>
 
-<script id="Cookiebot" src="https://consent.cookiebot.com/uc.js" data-cbid="025bf320-f598-4935-8a8d-ef7d858c7ee7" data-framework="IAB" type="text/javascript"></script>
-
 <script>var dataLayer = dataLayer || [];
 dataLayer.push({"channel":"myposter","country":"de","currency":"eur","locale":"de-DE","language":"de","platform":"w","sessionId":"83e0ae2661","googleAnalyticsTrackingId":"UA-23695719-1","page":{"uniqueIdentifier":"\/","templateType":"page-template-start"},"contextProduct":{"materialType":"leinwand","formatType":"800x600","sku":"lw-800x600","priceCurrent":54.99,"priceOriginal":54.99},"remarketingProduct":{"sku":"lw-800x600","price":54.99,"category":"Leinwand"}});
 </script>
@@ -24,10 +22,9 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
                     Just an implementation test
                 </h1>
                 <p>
-                    This page serves as a TCF 2.0 implementation test for the CMP.
+                    This page serves as implementation test.
                 </p>
     
-    <script id="CookieDeclaration" src="https://consent.cookiebot.com/025bf320-f598-4935-8a8d-ef7d858c7ee7/cd.js" type="text/javascript" async></script>
 
     
    <!-- <button onclick="javascript:UC_UI.showSecondLayer();">Show Second layer</button> -->
