--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-<script>var dataLayer = dataLayer || [];
+<script>
 dataLayer.push({"channel":"myposter","country":"de","currency":"eur","locale":"de-DE","language":"de","platform":"w","sessionId":"83e0ae2661","googleAnalyticsTrackingId":"UA-23695719-1","page":{"uniqueIdentifier":"\/","templateType":"page-template-start"},"contextProduct":{"materialType":"leinwand","formatType":"800x600","sku":"lw-800x600","priceCurrent":54.99,"priceOriginal":54.99},"remarketingProduct":{"sku":"lw-800x600","price":54.99,"category":"Leinwand"}});
 </script>
     <script>window ['gtag_enable_tcf_support'] = true;</script>    
