--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 
 <script>
-dataLayer.push("Hello !! This is test");
+dataLayer.push({message : "Hello !! This is test"});
 </script>
     <script>window ['gtag_enable_tcf_support'] = true;</script>    
 
