--- a/index.html
+++ b/index.html
@@ -2,9 +2,11 @@
 <html>
 <head>
 
-<script>
-dataLayer.push({message : "Hello !! This is test"});
-</script>
+<script> 
+dataLayer = [{ 
+'pageCategory': 'google-tag-manager-tips' 
+}]; 
+</script> 
     <script>window ['gtag_enable_tcf_support'] = true;</script>    
 
 <!-- Google Tag Manager -->
